fix: activate test profile on testing