@@ -51,4 +51,8 @@ dependencies {
 
 tasks.named('test') {
     useJUnitPlatform()
+
+    jvmArgs += [
+            "-XX:+EnableDynamicAgentLoading"
+    ]
 }
